feat(view): migrate application to JavaFX GUI